# caldrith

./: .dockerignore  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  Dockerfile  PROJECT_INDEX.json  README.md  docker-bake.hcl  mkdocs.yml  pyproject.toml
.claude/: ARCHITECTURE_MAP.md  COMMON_MISTAKES.md  QUICK_START.md  settings.json
.claude/decisions/: README.md
.claude/sessions/: TEMPLATE.md
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yaml  release.yml  security.yml
docs/: architecture.md  configuration.md  index.md  security.md  self-hosting.md
k8s/base/: deployment-worker.yaml  deployment.yaml  externalsecret-manual-trigger.yaml  externalsecret.yaml  ghcr-pull-secret.yaml  ingress.yaml  kustomization.yaml  service.yaml
k8s/optional/manual-trigger/: externalsecret.yaml
k8s/overlays/prod/: kustomization.yaml
src/caldrith/: __init__.py  github_json.py  settings.py
src/caldrith/api/: __init__.py  app.py  ratelimit.py  reconcile.py  security.py  webhooks.py
src/caldrith/audit/: __init__.py  logging.py
src/caldrith/auth/: __init__.py  client.py
src/caldrith/config/: __init__.py  diff.py  loader.py  schema.py
src/caldrith/reconcile/: __init__.py  actions.py  autolinks.py  base.py  branch.py  code_scanning.py  collaborators.py  custom_properties.py  environments.py  files.py  interactions.py  labels.py  milestones.py  org.py  overlay.py  pages.py  planner.py  pr_update.py  repository.py  ruleset.py  runner.py  secrets.py  security.py  selection.py  teams.py  topics.py  variables.py
src/caldrith/worker/: __init__.py  installations.py  queue.py  worker.py
tests/: __init__.py  conftest.py  test_actions.py  test_autolinks.py  test_branch.py  test_code_scanning.py  test_collaborators.py  test_cron_reconcile.py  test_custom_properties.py  test_diff.py  test_environments.py  test_files.py  test_interactions.py  test_labels.py  test_loader.py  test_milestones.py  test_org.py  test_org_code_security.py  test_overlay.py  test_pages.py  test_paginate_installations.py  test_planner.py  test_pr_update.py  test_queue.py  test_reconcile_endpoint.py  test_repo_security.py  test_repository.py  test_ruleset.py  test_runner.py  test_schema.py  test_secrets.py  test_security.py  test_selection.py  test_settings.py  test_teams.py  test_topics.py  test_variables.py  test_webhooks.py  test_worker.py
